--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            School Diary Blogs
-description:      A tale of School Diary journey.
+title:            SchoolDiary Blog
+description:      A tale of SchoolDiary journey.
 disqus_shortname:  # put your disqus here
 reading_time:     true # if true, shows the estimated reading time for a post
 words_per_minute: 200
@@ -28,10 +28,10 @@ menu:
 
 # Owner/author information
 owner:
-  name:           School Diary Team
+  name:           SchoolDiary Team
   site:           http://schooldiary.me
   avatar:         images/avatar.jpg
-  bio:            “School Diary makes School to Parent communication easy & engaging“
+  bio:            “SchoolDiary makes School to Parent communication easy & engaging“
   email:          contact@ufony.com
   # Social networking links used in footer. Update and remove as you like.
   twitter: SchoolDiaryApp
